--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [aarch64, armv7, s390x, ppc64le]
+        # target: [aarch64, armv7, s390x, ppc64le]
+        target: [aarch64, armv7, ppc64le]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
