--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,10 +168,10 @@ jobs:
         platform:
           - target: x64
             os: windows-latest
-            interpreter: 3.9 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10
+            interpreter: 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10
           - target: x86
             os: windows-latest
-            interpreter: 3.9 3.10 3.11 3.12
+            interpreter: 3.10 3.11 3.12
           - target: aarch64
             os: windows-11-arm
             interpreter: '3.10 3.11 3.12'
